// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detective-es6 accepts an ast 1`] = `[]`;

exports[`detective-es6 case1 1`] = `
[
  {
    "default": "React",
    "members": [
      {
        "alias": "Component",
        "name": "Component",
      },
    ],
    "name": "react",
  },
  {
    "members": [
      {
        "alias": "fetchUser",
        "name": "fetchUser",
      },
    ],
    "name": "@/service/user",
  },
]
`;

exports[`detective-es6 case2 1`] = `
[
  {
    "default": "Cookies",
    "name": "js-cookie",
  },
]
`;

exports[`detective-es6 handles default imports 1`] = `
[
  {
    "default": "foo",
    "name": "foo",
  },
]
`;

exports[`detective-es6 handles multiple imports 1`] = `
[
  {
    "members": [
      {
        "alias": "Foo",
        "name": "foo",
      },
      {
        "alias": "bar",
        "name": "bar",
      },
    ],
    "name": "mylib",
  },
  {
    "name": "mylib2",
  },
]
`;

exports[`detective-es6 impoet ImportNamespaceSpecifier the dependencies of es6 modules 1`] = `
[
  {
    "default": "Abc",
    "members": [
      {
        "alias": "a",
        "name": "a",
      },
      {
        "alias": "b",
        "name": "b",
      },
      {
        "alias": "d",
        "name": "c",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-es6 retrieves the dependencies of es6 modules 1`] = `
[
  {
    "alias": "All",
    "default": "Abc",
    "name": "mylib",
    "star": true,
  },
]
`;

exports[`detective-es6 retrieves the re-export * dependencies of es6 modules 1`] = `
[
  {
    "name": "mylib",
  },
]
`;

exports[`detective-es6 retrieves the re-export dependencies alias of es6 modules 1`] = `
[
  {
    "members": [
      {
        "alias": "Foo",
        "name": "foo",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-es6 retrieves the re-export dependencies of es6 modules 1`] = `
[
  {
    "members": [
      {
        "alias": "foo",
        "name": "foo",
      },
      {
        "alias": "bar",
        "name": "bar",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-es6 returns an empty list for non-es6 modules 1`] = `[]`;

exports[`detective-es6 support typescript 1`] = `
[
  {
    "default": "foo",
    "name": "foo",
  },
]
`;

exports[`detective-module-and-require accepts an ast 1`] = `[]`;

exports[`detective-module-and-require case1 1`] = `
[
  {
    "default": "React",
    "members": [
      {
        "alias": "Component",
        "name": "Component",
      },
    ],
    "name": "react",
  },
  {
    "members": [
      {
        "alias": "fetchUser",
        "name": "fetchUser",
      },
    ],
    "name": "@/service/user",
  },
]
`;

exports[`detective-module-and-require case2 1`] = `
[
  {
    "default": "Cookies",
    "name": "js-cookie",
  },
]
`;

exports[`detective-module-and-require handles default imports 1`] = `
[
  {
    "default": "foo",
    "name": "foo",
  },
]
`;

exports[`detective-module-and-require handles multiple imports 1`] = `
[
  {
    "members": [
      {
        "alias": "Foo",
        "name": "foo",
      },
      {
        "alias": "bar",
        "name": "bar",
      },
    ],
    "name": "mylib",
  },
  {
    "name": "mylib2",
  },
]
`;

exports[`detective-module-and-require impoet ImportNamespaceSpecifier the dependencies of es6 modules 1`] = `
[
  {
    "default": "Abc",
    "members": [
      {
        "alias": "a",
        "name": "a",
      },
      {
        "alias": "b",
        "name": "b",
      },
      {
        "alias": "d",
        "name": "c",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-module-and-require retrieves the dependencies of es6 modules 1`] = `
[
  {
    "alias": "All",
    "default": "Abc",
    "name": "mylib",
    "star": true,
  },
]
`;

exports[`detective-module-and-require retrieves the re-export * dependencies of es6 modules 1`] = `
[
  {
    "name": "mylib",
  },
]
`;

exports[`detective-module-and-require retrieves the re-export dependencies alias of es6 modules 1`] = `
[
  {
    "members": [
      {
        "alias": "Foo",
        "name": "foo",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-module-and-require retrieves the re-export dependencies of es6 modules 1`] = `
[
  {
    "members": [
      {
        "alias": "foo",
        "name": "foo",
      },
      {
        "alias": "bar",
        "name": "bar",
      },
    ],
    "name": "mylib",
  },
]
`;

exports[`detective-module-and-require support non-es6 exports 1`] = `
[
  {
    "members": [
      {
        "alias": "foo",
        "name": "default",
      },
      {
        "alias": "a",
        "name": "a",
      },
      {
        "alias": "c",
        "name": "b",
      },
    ],
    "name": "foo",
  },
]
`;

exports[`detective-module-and-require support non-es6 modules 1`] = `
[
  {
    "default": "bar",
    "name": "foo",
  },
]
`;

exports[`detective-module-and-require support typescript 1`] = `
[
  {
    "default": "foo",
    "name": "foo",
  },
]
`;
